Added year on stats

--- a/public/partials/stats.html
+++ b/public/partials/stats.html
@@ -30,7 +30,7 @@
 						</thead>
 						<tfoot>
 							<tr>
-								<th>Total
+								<th>Total <strong>{{graph.anualidad}}</strong>
 									<span ng-click="$root.exportXLS('tabladatos'+$index, 'estadisticas')" class="pull-right glyphicon glyphicon-floppy-disk"></span>
 								</th>
 								<td class="numberCell">{{graph.sum|number}}</td>
