--- a/public/partials/welcome.html
+++ b/public/partials/welcome.html
@@ -40,7 +40,7 @@
 			<div class="col-md-12 col-lg-6">
 				<div class="panel panel-default">
 					<div class="panel-heading">
-						Usuario
+						Usuario/a
 					</div>
 					<div class="panel-body minheight300">
 						<ul class="list-unstyled">
@@ -160,4 +160,3 @@
 		</div>
 	</div>
 </div>
-
