--- a/public/partials/entidadobjeto.html
+++ b/public/partials/entidadobjeto.html
@@ -3,7 +3,11 @@
 		<div style="clear:both" class="table-responsive">
 			<h3>Entidades objeto</h3>
 			<div class="hidden-print col-sm-12 text-center">
-				<span class="btn btn-primary" ng-click="newCarta()">Registar una nueva carta de compromisos</span>
+				<!--
+				<span class="btn btn-primary" ng-click="newCarta()">Registar una nueva carta de compromisos</span>-->
+				<a href="/newCarta" class="btn btn-primary" target="_blank" title="Registrar una nueva carta de compromisos">
+					Registrar una nueva carta de compromisos
+				</a>
 				<span class="btn btn-primary" ng-click="downloadxls()" ng-class="{'disabled': descargando}">Descargar listado indicadores</span>
 			</div>
 			<table class="table table-striped table-hover hidden-print" ng-show="$root.permisoscalculados.superuser">
