--- a/public/partials/permisoscrud.html
+++ b/public/partials/permisoscrud.html
@@ -58,6 +58,9 @@
 								<button class="btn btn-xs" ng-show="$root.permisoscalculados.superuser && persona[0]" ng-class="{'btn-danger': !persona[0].habilitado}" ng-click="setHabilitado(persona[0])" title="Pulse para habilitar esta persona. {{persona[0].habilitado ? 'Ahora mismo se encuentra habilitada' : 'Ahora mismo está deshabilitada'}}.">
 									<span class="glyphicon glyphicon-user"></span>
 								</button>
+								<button class="btn btn-xs" ng-show="$root.permisoscalculados.superuser && persona[0]" ng-class="{'btn-danger': !persona[0].teletrabajador}" ng-click="setTeletrabajador(persona[0])" title="Pulse para establecer como teletrabajador esta persona. {{persona[0].teletrabajador ? 'Ahora mismo es teletrabajador' : 'Ahora mismo no es teletrabajador'}}.">
+									<span class="glyphicon glyphicon-tent"></span>
+								</button>
 							</td>
 						<td>
 							<span ng-if="objetopermiso && objetopermiso.length === 1">{{objetopermiso[0].nombre}}</span>
@@ -142,7 +145,7 @@
 				</tbody>
 			</table>
 		</div>
-		
+
 		<div ng-class="{'col-lg-8': !oculto, 'col-lg-12': oculto}" ng-if="!show_details_permiso">
 			<h2 class="center">Permisos</h2>
 			<table class="table table-striped table-bordered table-condensed table-hover">
@@ -299,6 +302,10 @@
 						<td><span class="hidden-sm hidden-xs" ng-init="persona=getPersona(permiso)">
 								<button class="btn btn-xs" ng-show="$root.permisoscalculados.superuser && persona[0]" ng-class="{'btn-danger': !persona[0].habilitado}" ng-click="setHabilitado(persona[0])" title="Pulse para habilitar esta persona. {{persona[0].habilitado ? 'Ahora mismo se encuentra habilitada' : 'Ahora mismo está deshabilitada'}}.">
 									<span class="glyphicon glyphicon-user"></span>
+								</button>
+
+								<button class="btn btn-xs" ng-show="$root.permisoscalculados.superuser && persona[0]" ng-class="{'btn-danger': !persona[0].teletrabajador}" ng-click="setTeletrabajador(persona[0])" title="Pulse para establecer como teletrabajador esta persona. {{persona[0].teletrabajador ? 'Ahora mismo es teletrabajador' : 'Ahora mismo no es teletrabajador'}}.">
+									<span class="glyphicon glyphicon-tent"></span>
 								</button>
 								{{persona[0].nombre}} {{ persona[0].apellidos}}
 							</span>
